# blobwar

./: Cargo.toml  README.md  README.txt
src/: configuration.rs  main.rs
src/strategy/: alphabeta.rs  greedy.rs  human.rs  iterative.rs  minmax.rs  mod.rs
