[package]
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"
name = "blobwar"
version = "0.1.1"

[profile.release]
debug = true

[dependencies]
glob = "*"
itertools = "*"
libc = "0.2"
serde = "*"
serde_derive = "*"
serde_json = "*"
term = "*"

[target.'cfg(unix)'.dependencies]
nix = "0.6"
rand = "0.8.0"
